<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="faruqisan.assesmentone_quiz.WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textSize="48sp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/button_text_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeSubmitButton"
            android:elevation="0dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:textColor="@color/primaryText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/welcomeName"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="188dp"
            android:textAlignment="center"
            android:hint="@string/label_input_name" />

    </RelativeLayout>
</RelativeLayout>